deployment/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: callbackhandler-deployment
spec:
  selector:
    matchLabels:
      app: callbackhandler
  template:
    metadata:
      labels:
        app: callbackhandler
    spec:
      containers:
      - name: callbackhandler
        image: callbackhandler
        imagePullPolicy: Never
        resources:
          limits:
            memory: "128Mi"
            cpu: "500m"
        ports:
        - containerPort: 6478
