deployment/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: callbackhandler-ingress
  labels:
    name: callbackhandler
spec:
  rules:
  - host: localhost
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: callbackhandler-service
            port: 
              number: 6478
